<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu">
    <item android:title="@string/switch_msg_type"
        android:id="@+id/menu_switch_msg_type"
        android:icon="@drawable/ic_switch_msg_type"
        app:showAsAction="always" />
    <item android:title="@string/info"
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_info"
        app:showAsAction="always" />
    <item android:title="@string/content"
        android:id="@+id/menu_content"
        android:icon="@drawable/ic_content"
        app:showAsAction="always" />
    <item android:title="@string/setting"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always" />
</menu>