<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appsettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mmm.mddfamily.AppSettings">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:background="@color/Theme1BG"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/teach_ai"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:text="@string/teachai"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/teach_ai"
            android:layout_margin="15dp"
            android:text="@string/comment"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/app_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/comment"
            android:layout_margin="15dp"
            android:text="@string/appinfo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/developer_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/app_info"
            android:layout_margin="15dp"
            android:text="@string/developerinfo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>